--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=digital-signature-demo
-spring.datasource.url=jdbc:mysql://localhost:3306/tester
+spring.datasource.url=jdbc:mysql://lroundhouse.proxy.rlwy.net:34828/railway
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=ANkgtFPkhBqrdMVvzwOParhmLHtJkyFW
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 # Maximum file size.
 spring.servlet.multipart.max-file-size=10MB
