--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.application.name=digital-signature-demo
-spring.datasource.url=jdbc:mysql://lroundhouse.proxy.rlwy.net:34828/railway
+spring.datasource.url=jdbc:mysql://roundhouse.proxy.rlwy.net:34828/railway
 spring.datasource.username=root
 spring.datasource.password=ANkgtFPkhBqrdMVvzwOParhmLHtJkyFW
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # Maximum file size.
 spring.servlet.multipart.max-file-size=10MB
 # Maximum request size.
