--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.password=ANkgtFPkhBqrdMVvzwOParhmLHtJkyFW
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+server.port=8080
 # Maximum file size.
 spring.servlet.multipart.max-file-size=10MB
 # Maximum request size.
