--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 server.port=8080
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.html
 # Maximum file size.
 spring.servlet.multipart.max-file-size=10MB
 # Maximum request size.
