--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/tester
+spring.datasource.url=jdbc:mysql://roundhouse.proxy.rlwy.net:35196/railway
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=UynFJYmjKyoHnyOmmenZDhujSHeXVNAY
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
